--- a/CountryData/Info.plist
+++ b/CountryData/Info.plist
@@ -39,5 +39,21 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>UIAppFonts</key>
+    <array>
+        <string>OpenSans-Bold.ttf</string>
+        <string>OpenSans-BoldItalic.ttf</string>
+        <string>OpenSans-ExtraBold.ttf</string>
+        <string>OpenSans-ExtraBoldItalic.ttf</string>
+        <string>OpenSans-Italic.ttf</string>
+        <string>OpenSans-Light.ttf</string>
+        <string>OpenSans-LightItalic.ttf</string>
+        <string>OpenSans-Regular.ttf</string>
+        <string>OpenSans-SemiBold.ttf</string>
+        <string>OpenSans-SemiBoldItalic.ttf</string>
+        <string>Lato-Black.ttf</string>
+        <string>Lato-Bold.ttf</string>
+        <string>Lato-Regular.ttf</string>
+    </array>
 </dict>
 </plist>
