--- a/CountryData/Info.plist
+++ b/CountryData/Info.plist
@@ -55,5 +55,10 @@
         <string>Lato-Bold.ttf</string>
         <string>Lato-Regular.ttf</string>
     </array>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
 </dict>
 </plist>
